--- a/Booklist.html
+++ b/Booklist.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <div id="mySidenav" class="sidenav">
+        <a href=""><i class="fa fa-user-circle fa-3x " aria-hidden="true"></i></a>
         <img class="logo" onclick="myHome()" src="src/images/Spanios.svg" alt="">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html" class="active">Home</a>
