--- a/about.html
+++ b/about.html
@@ -14,9 +14,9 @@
         <a href=""><i class="fa fa-user-circle fa-3x " aria-hidden="true"></i></a>
         <img class="logo" onclick="myHome()" src="src/images/Spanios.svg" alt="">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="index.html" class="active">Home</a>
+        <a href="index.html" >Home</a>
         <a href="booklist.html">Books</a>
-        <a href="about.html">About</a>
+        <a href="about.html" class="active">About</a>
         <a href="contact.html">Contact</a>
       </div>
       
