--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,13 @@
 </head>
 <body>
   <div id="mySidenav" class="sidenav">
-    <a href=""><i class="fa fa-user-circle fa-3x " aria-hidden="true"></i></a>
+    <a href="" id=""><i class="fa fa-user-circle fa-3x " aria-hidden="true"></i></a>
     <img class="logo" onclick="myHome()" src="src/images/Spanios.svg" alt="">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="index.html" class="active">Home</a>
+    <a href="home.html" >Home</a>
     <a href="booklist.html">Books</a>
     <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
+    <a href="contact.html" class="active">Contact</a>
   </div>
   
   <!-- Use any element to open the sidenav -->
