fixing the booklist file that is not showing on gitpages.

--- a/home.html
+++ b/home.html
@@ -11,11 +11,11 @@
 </head>
 <body>
   <div id="mySidenav" class="sidenav">
-    <a href=""><i class="fa fa-user-circle fa-3x " aria-hidden="true"></i></a>
+    <a href="formLogin.html"><i class="fa fa-user-circle fa-3x " aria-hidden="true"></i></a>
     <img class="logo" onclick="myHome()" src="src/images/Spanios.svg" alt="">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="home.html" class="active">Home</a>
-    <a href="booklist.html">Books</a>
+    <a href="Booklist.html">Books</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
   </div>
