--- a/Booklist.html
+++ b/Booklist.html
@@ -12,11 +12,11 @@
 </head>
 <body>
     <div id="mySidenav" class="sidenav">
-        <a href=""><i class="fa fa-user-circle fa-3x " aria-hidden="true"></i></a>
+        <a href="formLogin.html"><i class="fa fa-user-circle fa-3x " aria-hidden="true"></i></a>
         <img class="logo" onclick="myHome()" src="src/images/Spanios.svg" alt="">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="home.html" >Home</a>
-        <a href="booklist.html" class="active">Books</a>
+        <a href="Booklist.html" class="active">Books</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
       </div>
