--- a/formLogin.html
+++ b/formLogin.html
@@ -14,7 +14,7 @@
 
 <body>
     <div id="mySidenav" class="sidenav">
-        <a href=""><i class="fa fa-user-circle fa-3x " aria-hidden="true"></i></a>
+        <a href="formLogin.html"><i class="fa fa-user-circle fa-3x " aria-hidden="true"></i></a>
         <img class="logo" onclick="myHome()" src="src/images/Spanios.svg" alt="">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="home.html" class="active">Home</a>
