adding the loose files that support the login system.

--- a/formLogin.html
+++ b/formLogin.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log In (Form)</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="formLogin.css">
     <script src="scripts.js"></script>
     <script src="processes.js"></script>
     <script src="formLogin.js"></script>
@@ -18,7 +19,7 @@
         <img class="logo" onclick="myHome()" src="src/images/Spanios.svg" alt="">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="home.html" class="active">Home</a>
-        <a href="booklist.html">Books</a>
+        <a href="Booklist.html">Books</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
       </div>
@@ -31,7 +32,7 @@
                 <!-- use form to allow form validation behavior but submit form using javascript.-->
             <form onsubmit="submitLogin(event);">
                 <div class="imgcontainer">
-                    <img src="./images/pexels-cottonbro-6344242.jpeg" alt="Avatar" class="avatar">
+                    <img src="src/images/pexels-tima-miroshnichenko-6550464.jpg" alt="Avatar" class="avatar">
                 </div>
                 <div class="container">
                     <div id="loginError" class="hide"></div>
