--- a/Booklist.html
+++ b/Booklist.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="index.js"defer></script>
+    <script src="index2.js"defer></script>
     <title>Spanios</title>
 </head>
 <body>
