--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="index.js"defer></script>
+    <script src="index2.js"defer></script>
     <title>Spanios</title>
 </head>
 <body>
@@ -29,7 +29,7 @@
       <div class="col color-pop">
         <h1 class="display-text2 text-color">Lorem ipsum dolor </h1>
         <p class="display-text3">Lorem, ipsum dolor sit amet consectetur</p>
-        <button class="btn1 ">Explore</button>
+        <button class="btn1 " onclick="window.location.href='about.html'">Explore</button>
       </div>
       <div class="col">
         <img class="photo1" src="src/images/pexels-cottonbro-4865746.jpg" alt="" />
