--- a/user.html
+++ b/user.html
@@ -5,21 +5,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Final Project Example</title>
+    <link rel="stylesheet" href="users.css">
+    <title>Spanios</title>
 </head>
 <script src="scripts.js"></script>
 <script src="processes.js"></script>
 
 <body>
+    
 
-    <div id="userDiv" onload="doUserInfo();"></div>
-    <h1>Index</h1>
 
-    <button id="list" onclick="goToList();">List</button><br />
-    <button id="add" onclick="goToAdd();">Add</button><br />
-    <button id="update" onclick="goToUpdate();">Update</button><br />
-    <button id="delete" onclick="goToDelete();">Delete</button><br />
-    <button id="log-out" onclick="doLogOut();">Log Out</button><br />
+    <div class="flex">
+        <div class="col">
+            <div id="userDiv" onload="doUserInfo();"><img src="src/images/pexels-godisable-jacob-871495.jpg" alt=""></div>
+            <h1 class="Title">User Tasks</h1>
+        </div>
+        <div class="col ">
+            <button id="list" onclick="goToList();">List</button><br />
+            <button id="add" onclick="goToAdd();">Add</button><br />
+            <button id="update" onclick="goToUpdate();">Update</button><br />
+            <button id="delete" onclick="goToDelete();">Delete</button><br />
+            <button id="log-out" onclick="doLogOut();">Log Out</button><br />
+        </div>
+        <div id="text" class="col ">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque, incidunt sequi? Provident temporibus incidunt autem delectus ipsam saepe, et quos dolorem facere voluptatibus explicabo odio in sequi inventore aliquam fuga commodi dolores ut, consectetur beatae soluta natus nihil? Ea autem sequi hic dolore unde minus asperiores debitis sint expedita quisquam!</p>
+        </div>
+    </div>
 </body>
 <script>
     //Adds the user's Infor to the userDiv
