--- a/list.html
+++ b/list.html
@@ -6,26 +6,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet" />
+    <link href="main.css" rel="stylesheet" />
+    <link href="users.css" rel="stylesheet" />
     <title>List</title>
 </head>
 <script src="scripts.js"></script>
 <script src="processes.js"></script>
 <script src="fileReader.js"></script>
 <script src="importBookListCl.js"></script>
+<script src="index2.js"></script>
 
 <body>
-
-    <div id="userDiv"></div>
-    <h1>List</h1>
-    <div>
-        Select a file: <input type="file" id="myFile">
-        <!--<button onclick='processFile()'>Process</button>-->
-        <button onclick='importBookList()'>Process</button>
-        <table id="myTable"></table>
-    </div>
-    <div id="bookList">
-        <table id="bookListTable" class="styled-table"></table>
-    </div>
+    <div id="mySidenav" class="sidenav">
+        <a href="formLogin.html"><i class="fa fa-user-circle fa-3x " aria-hidden="true"></i></a>
+        <img class="logo" onclick="myHome()" src="src/images/Spanios.svg" alt="">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="index.html" class="active">Home</a>
+        <a href="Booklist.html">Books</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+      </div>
+      
+      <!-- Use any element to open the sidenav -->
+      <span onclick="openNav()">open</span>
+      
+      <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
+      <div id="main">
+        <div class="flex">
+            <div class="col">
+                <div id="userDiv" onload="doUserInfo();"><img class="avatar-photo" src="src/images/pexels-godisable-jacob-871495.jpg" alt=""></div>
+            </div>
+            <div class="col">
+                <h1>List</h1>
+                <div>
+                    Select a file: <input type="file" id="myFile">
+                    <!--<button onclick='processFile()'>Process</button>-->
+                    <button onclick='importBookList()'>Process</button>
+                    <table id="myTable"></table>
+                </div>
+                <div id="bookList">
+                    <table id="bookListTable" class="styled-table"></table>
+                </div>
+            </div>
+        </div>
+      </div>
 </body>
 <script>
     //Adds the user's Infor to the userDiv
