some changes, I know useless message.

--- a/list.html
+++ b/list.html
@@ -36,7 +36,7 @@
             <div class="col">
                 <div id="userDiv" onload="doUserInfo();"><img class="avatar-photo" src="src/images/pexels-godisable-jacob-871495.jpg" alt=""></div>
             </div>
-            <div class="col">
+            <div class="col1">
                 <h1>List</h1>
                 <div>
                     Select a file: <input type="file" id="myFile">
