--- a/add.html
+++ b/add.html
@@ -5,17 +5,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add</title>
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="users.css">
+    <title>Spanios</title>
 </head>
 <script src="scripts.js"></script>
 <script src="processes.js"></script>
+<script src="index2.js"></script>
 
 <body>
-    <div id="userDiv"></div>
-    <h1>Add</h1>
-    <div><label for="Title">Title:</label><input type="text" id="title" /></div>
-    <div><label for="Author">Author:</label><input type="text" id="author" /></div>
-    <button id="add" type="button" onclick="doAdd();">Add</button>
+    <div id="mySidenav" class="sidenav">
+        <a href="formLogin.html"><i class="fa fa-user-circle fa-3x " aria-hidden="true"></i></a>
+        <img class="logo" onclick="myHome()" src="src/images/Spanios.svg" alt="">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="index.html" class="active">Home</a>
+        <a href="Booklist.html">Books</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+      </div>
+      
+      <!-- Use any element to open the sidenav -->
+      <span onclick="openNav()">open</span>
+      
+      <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
+      <div id="main">
+        <div class="flex">
+            <div class="col">
+                <div id="userDiv"><img class="avatar-photo" src="src/images/pexels-godisable-jacob-871495.jpg" alt=""></div>
+                    <h1>Add</h1>
+                    <div class=""><label for="Title">Title:</label><input type="text" id="title" /></div>
+                    <div class=""><label for="Author">Author:</label><input type="text" id="author" /></div>
+                    <button id="add" type="button" onclick="doAdd();">Add</button>
+            </div>
+        </div>
+        </div>
+      </div>
 </body>
 <script>
     //Adds the user's Infor to the userDiv
