adding the  form stylings to the contact page.

--- a/add.html
+++ b/add.html
@@ -33,8 +33,8 @@
             <div class="col">
                 <div id="userDiv"><img class="avatar-photo" src="src/images/pexels-godisable-jacob-871495.jpg" alt=""></div>
                     <h1>Add</h1>
-                    <div class=""><label for="Title">Title:</label><input type="text" id="title" /></div>
-                    <div class=""><label for="Author">Author:</label><input type="text" id="author" /></div>
+                    <div class="title"><label for="Title">Title:</label><input type="text" id="title" /></div>
+                    <div class="author"><label for="Author">Author:</label><input type="text" id="author" /></div>
                     <button id="add" type="button" onclick="doAdd();">Add</button>
             </div>
         </div>
