--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
       <img class="hero-img" src="https://images.pexels.com/photos/2422278/pexels-photo-2422278.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Woman speaking to someone on the phone">
       <div class="contact">
           <h1 class="Display-text">Contact Us</h1>
-          <p class="subhead">Reach out to use when ever you need. We are here to help.</p>
+          <p class="Subhead">Reach out to use when ever you need. We are here to help.</p>
       </div>
     </div>
     <div class="contact-form">
